# SyringePumpController

./: .clang-format  .gitignore  CLAUDE.md  DESIGN.md  LearnedPatterns.md  README.md  ToDo.md  main.py  pyproject.toml  server_run.sh
.claude/: settings.json
claude_test/: README.md  plunger_cycle.py  syringe_init.py
examples/: valve_toggle.py
firmware/: CMakeLists.txt  README.md  acm_node.sh  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
firmware/font_Montserrat/: montserrat_14_ext.c
firmware/main/: CMakeLists.txt  Kconfig.projbuild  config_store.c  config_store.h  idf_component.yml  main.c  pump_client.c  pump_client.h  pump_task.h  state.c  state.h  ui.c  ui.h  wifi.c  wifi.h
server/: README.md  __init__.py  __main__.py  app.py  errors.py  pump.toml.example  routes.py  schemas.py
src/sy01b/: syringe_pump_controller.py
tests/: test_config.py  test_plunger_motion_absent.py  test_protocol.py  test_resolve_port.py  test_valve_position.py
tests/server/: conftest.py  test_pump_toml_example.py  test_routes.py
